gobmkida/g2/aftermath_genmove
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/aftermath_genmove/src/engine/aftermath.c:923:7: error: use of undeclared identifier 'dword_76BCFC'
v35 = dword_76BCFC[v32]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/aftermath_genmove/src/obj/1/aftermath.o] Error 1
